fixtures/grammar/accept/folded.fm
---
summary: >
  one line,
  then another by Vera Example.
next: value
---
