fixtures/grammar/reject/flow-style.fm
---
value: [one, two]
---
Vera Example
